--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -23,6 +23,10 @@ body
     -webkit-font-smoothing: antialiased;
 }
 
+.container {
+    width: 90%;
+}
+
 #header
 {
     color: #CCC;
@@ -37,7 +41,7 @@ body
 
 .ng-scope
 {
-    width:1000px;
+
 }
 
 .footer
@@ -80,17 +84,22 @@ body
 */}
 
 /* Customize container */
-@media (min-width: 768px)
+/*@media (min-width: 768px)
 {
   .container
   {
-    max-width: 730px;
+
   }
-}
+}*/
 .container-narrow > hr {
   margin: 30px 0;
 }
 
+/*.angular-google-map
+{
+    width: 100%;
+    height: 100%;
+}*/
 
 /* Main marketing message and sign up button */
 .jumbotron {
@@ -111,29 +120,13 @@ body
 }
 
 /* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
 
 .angular-google-map-container
 {
-    height: 400px;
+    height: 800px;
     width: 100%;
-
+    margin-top: -100px;
+    margin-left: -50px;
 }
 
 
