--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -1,21 +1,23 @@
 
 
 <div ng-include="'partials/navbar'"></div>
-<div class="row">
+<div class="row height100">
     <div class="col-md-2">
-
+      <p id="add-input">
+        <input type="text" value="Enter Address" ng-autocomplete ng-model="autocomplete" options="options" details="details" style="width: 60%"/>
+      </p>
     </div>
 
-    <div class="col-md-8 ">
-        <google-map center="map.center" zoom="map.zoom" draggable="true"        options="map.options" control="mapControl">
+    <div class="col-md-8 height100">
+        <google-map class="height100" center="map.center" zoom="map.zoom" draggable="true"        options="map.options" control="mapControl">
         </google-map>
+        <!-- <div class="height100" style="background-color:red"></div> -->
     </div>
 
     <div class="col-md-2">
 
     </div>
 </div>
-
     <!-- THIS IS SUPPOSED TO WORK AND IS THE BEST WAY TO DO MARKERS.  FIGURE IT OUT!!! -->
 <!--         <markers idkey="'id'" models='crimeMarkers' coords="'self'" icon="'icon'" click="'onClicked'"></markers> -->
 
