--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -10,7 +10,12 @@
   <p id="header">Crīmen<p>
   <p id="sub-header">Big Apple's Crime Map</p>
   <br>
+  <!-- AUTO COMPLETE -->
+<!--   <p>
+    <input type="text" value="Enter Address" ng-autocomplete ng-model="autocomplete" options="options" details="details"/>
+  </p> -->
 </div>
+
 
 
 <!-- How did the horizontal lines come to exist? -->
