--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,7 +31,7 @@
 
 <!-- END D3 CODE -->
 
-<body ng-app="crimespaceAngularApp" class="height100">
+<body ng-app="crimespaceAngularApp" class="height100" id="main">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
