Fixed the maxZoom for clusters using all instances of crime.  Next steps: set up crime statistics page, its front-end route, and controller.  Incorporate D3.  Obtain and store NYC historical crime data in .tsv form.

--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -9,6 +9,11 @@
             <p id="add-input" class="height100">
                 <input type="text" value="Enter Address" ng-autocomplete ng-model="autocomplete" options="options" details="details" style="width: 60%"/>
             </p>
+            <p id="nav-list">
+            <a href="/about">About</a>
+            <a href="/crimestatistics">Crime Statistics in D3</a>
+            <p>
+
         </div>
 
         <div class="col-md-10 height100 no-padding">
