--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -1,4 +1,57 @@
 
 
-askjbalsflakjsb
-asb;ajbs;a
+    <div class="row height100">
+        <div class="col-md-2">
+            <div id="header-whole">
+                <p id="header">Crīmen<p>
+                <p id="sub-header">NYC's Crime Map</p>
+            </div>
+            <p id="add-input" class="height100">
+
+            </p>
+            <br>
+            <br>
+            <p class="navigation" id="nav-list">
+                <a href="/about">About</a>
+                <br>
+                <a href="/crimestatistics">Crime Statistics in D3</a>
+            <p>
+
+        </div>
+
+        <div class="col-md-10 height100 no-padding" id="background-dim-md-10">
+            <br><br><br>
+            <p id="about-text">
+                Crimen is a crime map for New York City.  It was developed using the MEAN stack (MongoDB, Express.js, Angular.js, and Node.js)
+                <br>
+                by Adi Sivasankaran, a student at Fullstack Academy.
+                <br>
+                <br>
+                There are many future functionalities to come to this web application, including D3 graphical representations of historical crime data, by boroughs and precincts.
+                Contact:
+                adi.sivasankaran@gmail.com
+            </p>
+        </div>
+
+<!--        <div class="col-md-2">
+            </div> -->
+    </div>
+    <!-- THIS IS SUPPOSED TO WORK AND IS THE BEST WAY TO DO MARKERS.  FIGURE IT OUT!!! -->
+<!--         <markers idkey="'id'" models='crimeMarkers' coords="'self'" icon="'icon'" click="'onClicked'"></markers> -->
+
+ <!--         <marker ng-repeat="marker in crimeMarkers" coords="{longitude: marker.longitude, latitude: marker.latitude}" click="'onClicked'" doCluster="doClusterRandomMarkers" clusterOptions="clusterOptions"></marker> -->
+
+
+</div>
+
+<div class="row marketing">
+
+  <!-- <div ng-repeat="thing in awesomeThings"> -->
+    <!-- What is thing? -->
+<!--       <h4>{{thing.name}}</h4>
+      <p>{{thing.info}}</p> -->
+
+
+  <!-- </div> -->
+</div>
+
