Testing crime.html, crime.js, and D3.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -80,7 +80,7 @@ body
 #add-input
 {
     width: 100%;
-    margin-left: 43px;
+    margin-left: 50px;
 }
 /*.ng-scope
 {
@@ -211,8 +211,66 @@ body
     opacity:0.7;
 }
 
-/*#about-content-div
+/*------------------*/
+/*ICONS IN THE ABOUT PAGE*/
+/*------------------*/
+.about-icons li
 {
-    background:
-}*/
+    list-style: none;
+    display: inline-block;
+    margin-left: 10px 10px;
+    padding: 5px 5px;
+    margin-left: 30px;
+}
 
+
+/* D3 CSS */
+
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.bar {
+  fill: orange;
+}
+
+.bar:hover {
+  fill: orangered ;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
