--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,6 +12,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(app) styles/vendor.css -->
     <!-- bower:css -->
@@ -22,9 +23,18 @@
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/cyborg/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/main.css">
+
+
+
     <!-- endbuild -->
 
+    <!-- D3 STYLING -->
+
   </head>
+<!-- END D3 STYLING -->
+
+
+
 
 <!-- D3 CODE -->
 
@@ -72,6 +82,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
+        <script type="text/javascript" src="scripts/controllers/crime.js"></script>
         <!-- endbuild -->
 
         <script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script>-
@@ -81,5 +92,9 @@
 
        <script type="text/javascript" src="scripts/ngAutoComplete.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+
+        <!-- D3 -->
+        <script src="http://d3js.org/d3.v3.min.js"></script>
+        <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 </body>
 </html>
