--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -3,7 +3,7 @@
     <div class="row height100">
         <div class="col-md-2">
             <div id="header-whole">
-                <p id="header">Crīmen<p>
+                <p id="header">Crimen<p>
                 <p id="sub-header">NYC's Crime Map</p>
             </div>
             <p id="add-input" class="height100">
@@ -14,9 +14,23 @@
             <p class="navigation" id="nav-list">
                 <a href="/about">About</a>
                 <br>
-                <a href="/crimestatistics">Crime Statistics in D3</a>
+                <a href="/crime">Crime Statistics in D3</a>
             <p>
-
+            <br>
+            <br>
+            <br>
+                <ul class="about-icons">
+                    <li class="twitter">
+                        <a href="https://twitter.com/hacker_adi">
+                            <span class="fa fa-twitter fa-2x" style="color: #CCC"></span>
+                        </a>
+                    </li>
+                    <li class="github">
+                        <a href="https://github.com/AdiedX">
+                            <span class="fa fa-github fa-2x" style="color: #CCC"></span>
+                        </a>
+                    </li>
+                </ul>
         </div>
 
         <div class="col-md-10 height100 no-padding" id="background-dim-md-10">
@@ -28,8 +42,7 @@
                 <br>
                 <br>
                 There are many future functionalities to come to this web application, including D3 graphical representations of historical crime data, by boroughs and precincts.
-                Contact:
-                adi.sivasankaran@gmail.com
+                <br><br>
             </p>
         </div>
 
