--- a/app/views/partials/crime.html
+++ b/app/views/partials/crime.html
@@ -7,14 +7,14 @@
                 <p id="sub-header">NYC's Crime Map</p>
             </div>
             <p id="add-input" class="height100">
-                <input type="text" value="Enter Address" ng-autocomplete ng-model="autocomplete" options="options" details="details" style="width: 60%"/>
+
             </p>
             <br>
             <br>
             <p class="navigation" id="nav-list">
                 <a href="/about">About</a>
                 <br>
-                <a href="/crime">Crime Statistics in D3</a>
+                <a href="/crimestatistics">Crime Statistics in D3</a>
             <p>
             <br>
             <br>
@@ -33,9 +33,15 @@
                 </ul>
         </div>
 
-        <div class="col-md-10 height100 no-padding">
-            <google-map class="height100" center="map.center" zoom="map.zoom" draggable="true" options="map.options" control="mapControl">
-            </google-map>
+        <div class="col-md-10 height100 no-padding" id="background-dim-md-10">
+            <br><br><br>
+
+<!-- D3 CODE -->
+
+
+
+
+
 
         </div>
 
@@ -60,4 +66,6 @@
 
   <!-- </div> -->
 </div>
+
+
 
