--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,7 +27,7 @@ body
 {
     list-style: none;
     color: #CCC;
-    font-size: 20px;
+    font-size: 1.5em;
     display: block;
     /*padding: 10px 10px;*/
     /*margin-left: -30px;*/
@@ -61,14 +61,14 @@ body
 #header
 {
     color: #CCC;
-    font-size: 60px;
+    font-size: 4em;
     /*margin-left: -20px;*/
 }
 
 #sub-header
 {
     color: #CCC;
-    font-size: 30px;
+    font-size: 2em;
     /*margin-left: -20px;*/
 }
 
@@ -82,50 +82,7 @@ body
     width: 100%;
     margin-left: 50px;
 }
-/*.ng-scope
-{
 
-}*/
-
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-/*.header,
-.marketing,
-.footer
-{
-  padding-left: 15px;
-  padding-right: 15px;
-}*/
-
-/* Custom page header */
-
-
-/* Make the masthead heading the same height as the navigation */
-/*.header h3
-{
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}*/
-
-/* Custom page footer */
-/*.footer
-{
-  padding-top: 19px;
-  color: #777;
-  margin-top: -100px;*/
-/*  border-top: 1px solid #e5e5e5;
-}*/
-
-/* Customize container */
-/*@media (min-width: 768px)
-{
-  .container
-  {
-
-  }
-}*/
 .container-narrow > hr {
   margin: 30px 0;
 }
@@ -135,26 +92,6 @@ body
     width: 100%;
     height: 100%;
 }
-
-/* Main marketing message and sign up button */
-/*.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}*/
-
-/* Supporting marketing content */
-/*.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
-*/
-/* Responsive: Portrait tablets and up */
 
 .angular-google-map-container
 {
@@ -223,9 +160,21 @@ body
     margin-left: 30px;
 }
 
-
+/*--------*/
 /* D3 CSS */
+/*--------*/
 
+.bar {
+  fill: steelblue;
+}
+
+.bar:hover {
+  fill: brown;
+}
+
+.axis {
+  font: 10px sans-serif;
+}
 
 .axis path,
 .axis line {
@@ -234,43 +183,6 @@ body
   shape-rendering: crispEdges;
 }
 
-.bar {
-  fill: orange;
-}
-
-.bar:hover {
-  fill: orangered ;
-}
-
 .x.axis path {
   display: none;
-}
-
-.d3-tip {
-  line-height: 1;
-  font-weight: bold;
-  padding: 12px;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  border-radius: 2px;
-}
-
-/* Creates a small triangle extender for the tooltip */
-.d3-tip:after {
-  box-sizing: border-box;
-  display: inline;
-  font-size: 10px;
-  width: 100%;
-  line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
-  content: "\25BC";
-  position: absolute;
-  text-align: center;
-}
-
-/* Style northward tooltips differently */
-.d3-tip.n:after {
-  margin: -1px 0 0 0;
-  top: 100%;
-  left: 0;
 }
