--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -6,12 +6,16 @@
                 <p id="header">Crimen<p>
                 <p id="sub-header">NYC's Crime Map</p>
             </div>
-            <p id="add-input" class="height100">
+            <p class="height100">
 
             </p>
             <br>
             <br>
+            <br>
+            <br>
             <p class="navigation" id="nav-list">
+                <a href="/">Map</a>
+                <br>
                 <a href="/about">About</a>
                 <br>
                 <a href="/crime">Crime Statistics in D3</a>
