--- a/app/views/partials/crime.html
+++ b/app/views/partials/crime.html
@@ -6,12 +6,16 @@
                 <p id="header">Crimen<p>
                 <p id="sub-header">NYC's Crime Map</p>
             </div>
-            <p id="add-input" class="height100">
+            <p class="height100">
 
             </p>
             <br>
             <br>
+            <br>
+            <br>
             <p class="navigation" id="nav-list">
+                <a href="/">Map</a>
+                <br>
                 <a href="/about">About</a>
                 <br>
                 <a href="/crimestatistics">Crime Statistics in D3</a>
@@ -34,7 +38,12 @@
         </div>
 
         <div class="col-md-10 height100 no-padding" id="background-dim-md-10">
+            <p>
+                <br>
+                Burglaries (2000 - 2013)
+            </p>
             <br><br><br>
+
 
 <!-- D3 CODE -->
 
