--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -12,6 +12,8 @@
             <br>
             <br>
             <p class="navigation" id="nav-list">
+                <a href="/">Map</a>
+                <br>
                 <a href="/about">About</a>
                 <br>
                 <a href="/crime">Crime Statistics in D3</a>
