--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -18,7 +18,7 @@
                 <br>
                 <a href="/about">About</a>
                 <br>
-                <a href="/crime">Crime Statistics in D3</a>
+                <a href="/crime">D3</a>
             <p>
             <br>
             <br>
