--- a/app/views/partials/crime.html
+++ b/app/views/partials/crime.html
@@ -18,7 +18,7 @@
                 <br>
                 <a href="/about">About</a>
                 <br>
-                <a href="/crimestatistics">Crime Statistics in D3</a>
+                <a href="/crimestatistics">D3</a>
             <p>
             <br>
             <br>
