--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -16,7 +16,7 @@
                 <br>
                 <a href="/about">About</a>
                 <br>
-                <a href="/crime">Crime Statistics in D3</a>
+                <a href="/crime">D3</a>
             <p>
             <br>
             <br>
