--- a/app/views/partials/crime.html
+++ b/app/views/partials/crime.html
@@ -37,7 +37,7 @@
                 </ul>
         </div>
 
-        <div class="col-md-10 height100 no-padding" id="background-dim-md-10">
+        <div class="col-md-10 height100 no-padding" id="background-dim-md-10" style="padding-left: 300px;">
             <p>
                 <br>
                 Burglaries (2000 - 2013)
