--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -10,6 +10,8 @@
                 </span>
                 <br><br>
                 <span id="main-addInput" class="height100">
+                    <!-- The 'options' & 'details' are ngAutoComplete attributes -->
+                    <!-- 'details="details"' is were the lat/long information comes from. -->
                     <input type="text" value="Enter Address" ng-autocomplete ng-model="autocomplete" options="options" details="details"/>
                 </span>
                 <br><br>
@@ -42,6 +44,9 @@
         </div>
 
         <div class="col-md-10 height100 no-padding">
+            <!-- STEP 1: PLACE GOOGLE MAPS DIRECTIVE -->
+            <!-- The simple draggable="true" attribute makes the map draggable -->
+            <!--  -->
             <google-map class="height100" center="map.center" zoom="map.zoom" draggable="true" options="map.options" control="mapControl">
             </google-map>
         </div>
