--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,7 +41,8 @@
 
 <!-- END D3 CODE -->
 
-<body ng-app="crimespaceAngularApp" class="height100" id="main">
+<!--  -->
+<body ng-app="crimespaceAngularApp" class="height100" id="main" background="/views/partials/dark-maiden.jpg" bgproperties="fixed">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -85,16 +86,18 @@
         <script type="text/javascript" src="scripts/controllers/crime.js"></script>
         <!-- endbuild -->
 
-        <script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script>-
+        <script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script>
         <script src='bower_components/lodash/dist/lodash.underscore.min.js'></script>
         <script src='bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
 
 
-       <script type="text/javascript" src="scripts/ngAutoComplete.js"></script>
+        <script type="text/javascript" src="scripts/ngAutoComplete.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 
         <!-- D3 -->
-  <script src="http://d3js.org/d3.v3.min.js"></script>
+        <script src="http://d3js.org/d3.v3.min.js"></script>
+        <!-- GOOGLE CHARTS -->
+
 
 </body>
 </html>
