--- a/app/views/partials/crime.html
+++ b/app/views/partials/crime.html
@@ -1,80 +1,17 @@
 
 
-    <div class="row height100">
-        <div class="col-md-2">
-            <div id="header-whole">
-                <p id="header">Crimen<p>
-                <p id="sub-header">NYC's Crime Map</p>
-            </div>
-            <p class="height100">
 
-            </p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <p class="navigation" id="nav-list">
-                <a href="/">Map</a>
-                <br>
-                <a href="/about">About</a>
-                <br>
-                <a href="/crimestatistics">D3</a>
-            <p>
-            <br>
-            <br>
-            <br>
-                <ul class="about-icons">
-                    <li class="twitter">
-                        <a href="https://twitter.com/hacker_adi">
-                            <span class="fa fa-twitter fa-2x" style="color: #CCC"></span>
-                        </a>
-                    </li>
-                    <li class="github">
-                        <a href="https://github.com/AdiedX">
-                            <span class="fa fa-github fa-2x" style="color: #CCC"></span>
-                        </a>
-                    </li>
-                </ul>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 height100 crime-container">
+    <div class="crime-body">
+        <div id="crime-header">
+            <div>HISTORICAL CRIME TRENDS</div>
+            <br><br><br><br><br><br><br>
         </div>
 
-        <div class="col-md-10 height100 no-padding" id="background-dim-md-10" style="padding-left: 300px;">
-            <p>
-                <br>
-                Burglaries (2000 - 2013)
-            </p>
-            <br><br><br>
+        <div id="chart_div" style="width: 500px; height: 500px;"></div>
 
 
-<!-- D3 CODE -->
-
-
-
-
-
-
-        </div>
-
-<!--        <div class="col-md-2">
-            </div> -->
+<!--         <div class="crime-burglary" id="background-dim-md-10"> -->
     </div>
-    <!-- THIS IS SUPPOSED TO WORK AND IS THE BEST WAY TO DO MARKERS.  FIGURE IT OUT!!! -->
-<!--         <markers idkey="'id'" models='crimeMarkers' coords="'self'" icon="'icon'" click="'onClicked'"></markers> -->
-
- <!--         <marker ng-repeat="marker in crimeMarkers" coords="{longitude: marker.longitude, latitude: marker.latitude}" click="'onClicked'" doCluster="doClusterRandomMarkers" clusterOptions="clusterOptions"></marker> -->
-
-
 </div>
-
-<div class="row marketing">
-
-  <!-- <div ng-repeat="thing in awesomeThings"> -->
-    <!-- What is thing? -->
-<!--       <h4>{{thing.name}}</h4>
-      <p>{{thing.info}}</p> -->
-
-
-  <!-- </div> -->
-</div>
-
-
 
